syntax = "proto3";

package externalfunctions;

option go_package = "./grpcdefinition";

// Exposed Service
service ExternalFunctions {
    rpc ListFunctions(ListFunctionsRequest) returns (ListOfFunctions) {}
    rpc RunFunction(FunctionInputs) returns (FunctionOutputs) {}
    rpc StreamFunction(FunctionInputs) returns (stream StreamOutput) {}
}

// ListFunctions
message ListFunctionsRequest {
}

message ListOfFunctions {
    map<string, FunctionDefinition> functions = 1;
}

message FunctionDefinition {
    string name = 1;
    string description = 2;
    repeated FunctionInputDefinition input = 3;
    repeated FunctionOutputDefinition output = 4;
}

message FunctionInputDefinition {
    string name = 1;
    string type = 2;
    string go_type = 3;
    repeated string options = 4;
}

message FunctionOutputDefinition {
    string name = 1;
    string type = 2;
    string go_type = 3;
}

// RunFunction
message FunctionInputs {
    string name = 1;
    repeated FunctionInput inputs = 2;
}

message FunctionInput {
    string name = 1;
    string go_type = 2;
    string value = 3;
}

message FunctionOutputs {
    string name = 1;
    repeated FunctionOutput outputs = 2;
}

message FunctionOutput {
    string name = 1;
    string go_type = 2;
    string value = 3;
}

message StreamOutput {
    int32 message_counter = 1;
    bool is_last = 2;
    string value = 3;
}
